--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -268,6 +268,14 @@ function failureFunc(response){
     container.update('Error while loading information.  Please try again later.');
     
 }
+
+function activateUserField(){
+	$('userid').disabled = false;
+}
+
+function activatePassField(){
+	$('pass').disabled = false;
+}
   
 function updateTeams(mode) {
 	$('updating').style.display = '';
