Save ESPN ID in PlayerStats table and change text to Saving Changes

--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -407,7 +407,7 @@ function submitLineup() {
   		onFailure:  failureFunc
 	});
 	
-	$('status_span').innerHTML = "Submitting Lineup <IMAGE SRC=\"/images/refresh-animated.gif\">";
+	$('status_span').innerHTML = "Saving Changes <IMAGE SRC=\"/images/refresh-animated.gif\">";
 
 }
 
