Test Commit Headings on show.html.erb

--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -130,9 +130,9 @@ Switch to <%=(@pitch)?'Batters':'Pitchers'%>
 <td class="MainTinyHeader">Player</td>
 <td class="MainTinyHeader" align="left" colspan="2">Pos Rank</td>
 
-<td class="MainTinyHeader">Start Position</td>
-<td class="MainTinyHeader">Start Frequency</td>
-<td class="MainTinyHeader">Start Behavior</td>
+<td class="MainTinyHeader">Start <br>Position</td>
+<td class="MainTinyHeader">Start <br>Frequency</td>
+<td class="MainTinyHeader">Start <br>Behavior</td>
 </tr>
 
     <%- @roster_list.each do |roster| -%>
@@ -231,9 +231,9 @@ Switch to <%=(@pitch)?'Batters':'Pitchers'%>
 <td class="MainTinyHeader">Slot</td>
 <td class="MainTinyHeader">Player</td>
 <td class="MainTinyHeader" align="left" colspan="2">Pos Rank</td>
-<td class="MainTinyHeader">Start Position</td>
-<td class="MainTinyHeader">Start Frequency</td>
-<td class="MainTinyHeader">Bench Priority</td>
+<td class="MainTinyHeader">Start <br>Position</td>
+<td class="MainTinyHeader">Start <br>Frequency</td>
+<td class="MainTinyHeader">Bench <br>Priority</td>
 </tr>
 
     <%
