--- a/app/views/user/change_password.html.erb
+++ b/app/views/user/change_password.html.erb
@@ -1,9 +1,12 @@
-<%= @user.errors.full_messages.first if @user.errors.any? %>
 
+<h3 class="HomeSignUp" >
 
 <%= form_tag do %>
-  <h3>Change password for User - <%=@user.email%></h3>
-  <%= label_tag(:pass, "Password:") %>
+  <b>Change Password - <%=@user.email%></b><BR><BR>
+  <%= label_tag(:pass, "Original Password:") %>
+  <%= password_field_tag(:oldpass) %>	
+  <BR>	
+  <%= label_tag(:pass, "New Password:") %>
   <%= password_field_tag(:pass) %>
   <BR>
   <%= label_tag(:repass, "Confirm Password:") %>
@@ -11,7 +14,13 @@
   <BR>
   <%= submit_tag("Submit") %>
   <BR>
-  
+  	
+  <span class="flash_message"><%= @user.errors.full_messages.first if @user.errors.any? %></span>
+  <% flash.each do |name, msg| %>
+	        <%= content_tag :span, msg, :id => "flash_#{name}", :class=>"flash_message" %>
+	      <% end %>
 <% end %>
+
+</h3>
 
 
