--- a/app/views/user/signup.html.erb
+++ b/app/views/user/signup.html.erb
@@ -37,7 +37,7 @@ Your Fantasy Lineups<br>
 	      <% end %>
 <input name="commit" src="/images/RSSignUp.png" type="image" value="Sign Up"/>
 <div class="HomeTinyLinks">
-<%= link_to 'Log In', :action => 'login' %> or <u>Forgot Your Password?</u><br>
+<%= link_to 'Log In', :action => 'login' %> or <%= link_to 'Forgot Your Password?', :action => 'forgot_password' %><br>
 </div>
 </h3>
 <% end %>
