--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -23,7 +23,7 @@
 body {
 	margin: auto;
 	height:100%;
-	min-height:100%
+	min-height:100%;
 	width: 95%;
 	font: normal 12px Verdana, Geneva, sans-serif;	
 	background-color: #FFFFFF;
