--- a/app/views/static/contact.html.erb
+++ b/app/views/static/contact.html.erb
@@ -1,4 +1,4 @@
-<div id="RSText" style="float:left; margin:0;">
+<div id="RSText" style="float:left; margin:0; width: 98%">
 	<ul>
 	  <li><h1>Contact Us</h1></li>
 	  	<li><h2>Support</h2><ul>
