--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -48,6 +48,8 @@ body {
 
 }
 
+#RSText ul li { list-style-type: none; }
+
 #RSText {
 	background-color: #f7f7f8;
 	padding-left: 15px;
@@ -251,6 +253,20 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 	font-weight: normal;
 	font-variant: normal;
+}
+
+.PopRowBeg {
+	padding-left:10px;
+	padding-right: 10px;
+	padding-top: 2px;
+	padding-bottom: 2px;
+	border: 0 solid #FFFFFF; 
+	border-left-width:1px;
+	border-top-width:1px;
+	color:black;
+	border-right-width:1px;	
+	font: bold 12px Arial, Helvetica, sans-serif;
+	background-color: #f7f7f8;
 }
 
 .MainRowBeg {
