--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,10 @@
      var $j = jQuery.noConflict();
      </script>
 
+	  <meta property="og:title" content="RotoStarter" /> 
+	  <meta property="og:image" content="http://www.rotostarter.com/images/RotoStarterLogoBlue200.png" /> 
+	  <meta property="og:description" content="Free service that automatically starts your fantasy players" /> 
+	  <meta property="og:url" content="http://www.rotostarter.com">
 	    
     <%= csrf_meta_tag %>
     <%= yield(:head) %>
